--- a/classy_attire/src/Pages/SmallNav.module.css
+++ b/classy_attire/src/Pages/SmallNav.module.css
@@ -2,11 +2,11 @@
     /* border: 1px solid red; */
     display:flex;
     flex:1.5;
-    /* background-color: black; */
+    background-color: rgb(12, 12, 12);
     width: 100%;
     height: 40px;
     font-family: ProximaNova-Regular,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    /* color:"white" */
+    color:white
 }
 .text_top{
     /* border: 1px solid red; */
@@ -14,13 +14,16 @@
     width: 100%;
     display:flex;
     align-items:center;
-    
+    font-weight: bold;
+   
 }
 .icon{
     /* border: 1px solid red; */
     height:66%;
     width: 21%;
     padding-right: 9px;
+   color:white;
+   border-radius: 80px;
 
 }
 .top_left_bar{
@@ -28,6 +31,7 @@
     display: flex;
     justify-content: flex-start;
     flex:1;
+margin-left: 30px;
 
 }
 .top_text_left{
@@ -36,6 +40,7 @@
     justify-content: flex-end;
     align-items: center;
     flex:1;
+ 
 }
 .h_top_bar{
     /* border: 2px solid black; */
