--- a/classy_attire/src/Components/Subpages/Prod.module.css
+++ b/classy_attire/src/Components/Subpages/Prod.module.css
@@ -18,9 +18,9 @@
     height: 90%;
 }
 .prod_price{
-    font-size: 14px;
+    font-size: 15px;
     font-family: ProximaNova-Semibold, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-weight: 570;
+    font-weight:bold;
     padding: 7px;
     /* padding-right: 50%; */
 
@@ -35,12 +35,15 @@
     /* background-color:yellow; */
 }
 .prod_brand{
-    font-size: 14px;
+    font-size: 15px;
     font-family: ProximaNova-Regular,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-weight: 400;
+    font-weight: bold;
     padding: 7px;
 }
 .prod_cart_btn{
     padding:5px 7px;
-    background-color: rgb(243, 243, 79);
+    background-color: #faa619;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
 }
